Fixed table going out of box, added a higher margin between images and resized them

--- a/fanPageStyling.css
+++ b/fanPageStyling.css
@@ -4,7 +4,7 @@
 }
 
 .mediumImage {
-	width: 45%;
+	width: 40%;
 }
 
 .infoPageHeaders {
@@ -13,6 +13,7 @@
 	font-size: 60px;
 	text-align: left;
 	color: #3b3a36;
+
 
 }
 
